@@ -22,7 +22,7 @@ import junit.framework.TestCase;
 
 public class IntegerTest extends TestCase {
     private Properties orgProps;
-    
+
     @Override
     protected void setUp() {
         orgProps = System.getProperties();
@@ -55,7 +55,7 @@ public class IntegerTest extends TestCase {
                 .compareTo(new Integer(-2)));
         assertTrue("3 compared to 2 gave non-positive answer", new Integer(3)
                 .compareTo(new Integer(2)) > 0);
-        
+
         try {
             new Integer(0).compareTo(null);
             fail("No NPE");
@@ -502,14 +502,14 @@ public class IntegerTest extends TestCase {
         // Test for method java.lang.String java.lang.Integer.toString(int)
 
         assertEquals("Returned incorrect String", "-80765", Integer.toString(-80765)
-                );
+        );
         assertEquals("Returned incorrect octal string", "2147483647", Integer.toString(
                 Integer.MAX_VALUE));
         assertEquals("Returned incorrect octal string", "-2147483647", Integer.toString(
                 -Integer.MAX_VALUE));
         assertEquals("Returned incorrect octal string", "-2147483648", Integer.toString(
                 Integer.MIN_VALUE));
-        
+
         // Test for HARMONY-6068
         assertEquals("Returned incorrect octal String", "-1000", Integer.toString(-1000));
         assertEquals("Returned incorrect octal String", "1000", Integer.toString(1000));
@@ -531,7 +531,7 @@ public class IntegerTest extends TestCase {
                 + Integer.toString(2147483647, 16), Integer.toString(
                 2147483647, 16).equals("7fffffff"));
         assertEquals("Incorrect string returned", "1111111111111111111111111111111", Integer.toString(2147483647, 2)
-                );
+        );
         assertEquals("Incorrect string returned", "2147483647", Integer
                 .toString(2147483647, 10));
 
@@ -540,8 +540,8 @@ public class IntegerTest extends TestCase {
         assertTrue("Returned incorrect hex string--wanted -7fffffff but got: "
                 + Integer.toString(-2147483647, 16), Integer.toString(
                 -2147483647, 16).equals("-7fffffff"));
-        assertEquals("Incorrect string returned", 
-                        "-1111111111111111111111111111111", Integer
+        assertEquals("Incorrect string returned",
+                "-1111111111111111111111111111111", Integer
                 .toString(-2147483647, 2));
         assertEquals("Incorrect string returned", "-2147483647", Integer.toString(-2147483647,
                 10));
@@ -551,8 +551,8 @@ public class IntegerTest extends TestCase {
         assertTrue("Returned incorrect hex string--wanted -80000000 but got: "
                 + Integer.toString(-2147483648, 16), Integer.toString(
                 -2147483648, 16).equals("-80000000"));
-        assertEquals("Incorrect string returned", 
-                        "-10000000000000000000000000000000", Integer
+        assertEquals("Incorrect string returned",
+                "-10000000000000000000000000000000", Integer
                 .toString(-2147483648, 2));
         assertEquals("Incorrect string returned", "-2147483648", Integer.toString(-2147483648,
                 10));
@@ -667,23 +667,23 @@ public class IntegerTest extends TestCase {
         assertTrue("Failed to throw exception with hex MIN_VALUE - 1",
                 exception);
     }
-    
-	/**
-	 * @tests java.lang.Integer#valueOf(byte)
-	 */
-	public void test_valueOfI() {
-		assertEquals(new Integer(Integer.MIN_VALUE), Integer.valueOf(Integer.MIN_VALUE));
-		assertEquals(new Integer(Integer.MAX_VALUE), Integer.valueOf(Integer.MAX_VALUE));
-		assertEquals(new Integer(0), Integer.valueOf(0));
 
-		short s = -128;
-		while (s < 128) {
-			assertEquals(new Integer(s), Integer.valueOf(s));
-			assertSame(Integer.valueOf(s), Integer.valueOf(s));
-			s++;
-		}
-	}
-    
+    /**
+     * @tests java.lang.Integer#valueOf(byte)
+     */
+    public void test_valueOfI() {
+        assertEquals(new Integer(Integer.MIN_VALUE), Integer.valueOf(Integer.MIN_VALUE));
+        assertEquals(new Integer(Integer.MAX_VALUE), Integer.valueOf(Integer.MAX_VALUE));
+        assertEquals(new Integer(0), Integer.valueOf(0));
+
+        short s = -128;
+        while (s < 128) {
+            assertEquals(new Integer(s), Integer.valueOf(s));
+            assertSame(Integer.valueOf(s), Integer.valueOf(s));
+            s++;
+        }
+    }
+
     /**
      * @tests java.lang.Integer#hashCode()
      */
@@ -701,26 +701,30 @@ public class IntegerTest extends TestCase {
         assertEquals(new Integer(0), new Integer("0"));
         assertEquals(new Integer(1), new Integer("1"));
         assertEquals(new Integer(-1), new Integer("-1"));
-        
+
         try {
             new Integer("0x1");
             fail("Expected NumberFormatException with hex string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             new Integer("9.2");
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             new Integer("");
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             new Integer(null);
             fail("Expected NumberFormatException with null string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
     }
 
     /**
@@ -731,7 +735,7 @@ public class IntegerTest extends TestCase {
         assertEquals(2, new Integer(2).intValue());
         assertEquals(0, new Integer(0).intValue());
         assertEquals(-1, new Integer(-1).intValue());
-        
+
         Integer i = new Integer(-89000);
         assertEquals("Incorrect Integer created", -89000, i.intValue());
     }
@@ -740,7 +744,7 @@ public class IntegerTest extends TestCase {
      * @tests java.lang.Integer#byteValue()
      */
     public void test_booleanValue() {
-        assertEquals(1, new Integer(1).byteValue());    
+        assertEquals(1, new Integer(1).byteValue());
         assertEquals(2, new Integer(2).byteValue());
         assertEquals(0, new Integer(0).byteValue());
         assertEquals(-1, new Integer(-1).byteValue());
@@ -753,7 +757,7 @@ public class IntegerTest extends TestCase {
         assertEquals(new Integer(0), Integer.valueOf(0));
         assertEquals(new Integer(1), Integer.valueOf(1));
         assertEquals(new Integer(-1), Integer.valueOf(-1));
-        
+
         Integer fixture = new Integer(25);
         assertEquals(fixture, fixture);
         assertFalse(fixture.equals(null));
@@ -787,61 +791,69 @@ public class IntegerTest extends TestCase {
         assertEquals(new Integer(0), Integer.valueOf("0"));
         assertEquals(new Integer(1), Integer.valueOf("1"));
         assertEquals(new Integer(-1), Integer.valueOf("-1"));
-        
+
         try {
             Integer.valueOf("0x1");
             fail("Expected NumberFormatException with hex string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.valueOf("9.2");
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.valueOf("");
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             Integer.valueOf(null);
             fail("Expected NumberFormatException with null string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
     }
-    
+
     /**
-     * @tests java.lang.Integer#valueOf(String,int)
+     * @tests java.lang.Integer#valueOf(String, int)
      */
     public void test_valueOfLjava_lang_StringI() {
         assertEquals(new Integer(0), Integer.valueOf("0", 10));
         assertEquals(new Integer(1), Integer.valueOf("1", 10));
         assertEquals(new Integer(-1), Integer.valueOf("-1", 10));
-        
+
         //must be consistent with Character.digit()
         assertEquals(Character.digit('1', 2), Integer.valueOf("1", 2).byteValue());
         assertEquals(Character.digit('F', 16), Integer.valueOf("F", 16).byteValue());
-        
+
         try {
             Integer.valueOf("0x1", 10);
             fail("Expected NumberFormatException with hex string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.valueOf("9.2", 10);
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.valueOf("", 10);
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             Integer.valueOf(null, 10);
             fail("Expected NumberFormatException with null string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
     }
-    
+
     /**
      * @tests java.lang.Integer#parseInt(String)
      */
@@ -849,61 +861,69 @@ public class IntegerTest extends TestCase {
         assertEquals(0, Integer.parseInt("0"));
         assertEquals(1, Integer.parseInt("1"));
         assertEquals(-1, Integer.parseInt("-1"));
-        
+
         try {
             Integer.parseInt("0x1");
             fail("Expected NumberFormatException with hex string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.parseInt("9.2");
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.parseInt("");
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             Integer.parseInt(null);
             fail("Expected NumberFormatException with null string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
     }
-    
+
     /**
-     * @tests java.lang.Integer#parseInt(String,int)
+     * @tests java.lang.Integer#parseInt(String, int)
      */
     public void test_parseIntLjava_lang_StringI() {
         assertEquals(0, Integer.parseInt("0", 10));
         assertEquals(1, Integer.parseInt("1", 10));
         assertEquals(-1, Integer.parseInt("-1", 10));
-        
+
         //must be consistent with Character.digit()
         assertEquals(Character.digit('1', 2), Integer.parseInt("1", 2));
         assertEquals(Character.digit('F', 16), Integer.parseInt("F", 16));
-        
+
         try {
             Integer.parseInt("0x1", 10);
             fail("Expected NumberFormatException with hex string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.parseInt("9.2", 10);
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.parseInt("", 10);
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             Integer.parseInt(null, 10);
             fail("Expected NumberFormatException with null string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
     }
-    
+
     /**
      * @tests java.lang.Integer#decode(String)
      */
@@ -915,24 +935,27 @@ public class IntegerTest extends TestCase {
         assertEquals(new Integer(0xF), Integer.decode("#F"));
         assertEquals(new Integer(0xF), Integer.decode("0XF"));
         assertEquals(new Integer(07), Integer.decode("07"));
-        
+
         try {
             Integer.decode("9.2");
             fail("Expected NumberFormatException with floating point string.");
-        } catch (NumberFormatException e) {}
+        } catch (NumberFormatException e) {
+        }
 
         try {
             Integer.decode("");
             fail("Expected NumberFormatException with empty string.");
-        } catch (NumberFormatException e) {}
-        
+        } catch (NumberFormatException e) {
+        }
+
         try {
             Integer.decode(null);
             //undocumented NPE, but seems consistent across JREs
             fail("Expected NullPointerException with null string.");
-        } catch (NullPointerException e) {}
+        } catch (NullPointerException e) {
+        }
     }
-    
+
     /**
      * @tests java.lang.Integer#doubleValue()
      */
@@ -941,7 +964,7 @@ public class IntegerTest extends TestCase {
         assertEquals(0D, new Integer(0).doubleValue(), 0D);
         assertEquals(1D, new Integer(1).doubleValue(), 0D);
     }
-    
+
     /**
      * @tests java.lang.Integer#floatValue()
      */
@@ -950,7 +973,7 @@ public class IntegerTest extends TestCase {
         assertEquals(0F, new Integer(0).floatValue(), 0F);
         assertEquals(1F, new Integer(1).floatValue(), 0F);
     }
-    
+
     /**
      * @tests java.lang.Integer#intValue()
      */
@@ -959,7 +982,7 @@ public class IntegerTest extends TestCase {
         assertEquals(0, new Integer(0).intValue());
         assertEquals(1, new Integer(1).intValue());
     }
-    
+
     /**
      * @tests java.lang.Integer#longValue()
      */
@@ -968,7 +991,7 @@ public class IntegerTest extends TestCase {
         assertEquals(0L, new Integer(0).longValue());
         assertEquals(1L, new Integer(1).longValue());
     }
-    
+
     /**
      * @tests java.lang.Integer#shortValue()
      */
@@ -977,6 +1000,7 @@ public class IntegerTest extends TestCase {
         assertEquals(0, new Integer(0).shortValue());
         assertEquals(1, new Integer(1).shortValue());
     }
+
     /**
      * @tests java.lang.Integer#highestOneBit(int)
      */
@@ -986,45 +1010,46 @@ public class IntegerTest extends TestCase {
         assertEquals(0x08, Integer.highestOneBit(0x0C));
         assertEquals(0x08, Integer.highestOneBit(0x0F));
         assertEquals(0x80, Integer.highestOneBit(0xFF));
-        
+
         assertEquals(0x080000, Integer.highestOneBit(0x0F1234));
         assertEquals(0x800000, Integer.highestOneBit(0xFF9977));
-        
+
         assertEquals(0x80000000, Integer.highestOneBit(0xFFFFFFFF));
-        
+
         assertEquals(0, Integer.highestOneBit(0));
         assertEquals(1, Integer.highestOneBit(1));
         assertEquals(0x80000000, Integer.highestOneBit(-1));
     }
-    
+
     /**
      * @tests java.lang.Integer#lowestOneBit(int)
      */
     public void test_lowestOneBitI() {
         assertEquals(0x10, Integer.lowestOneBit(0xF0));
-        
+
         assertEquals(0x10, Integer.lowestOneBit(0x90));
         assertEquals(0x10, Integer.lowestOneBit(0xD0));
-        
+
         assertEquals(0x10, Integer.lowestOneBit(0x123490));
         assertEquals(0x10, Integer.lowestOneBit(0x1234D0));
-        
+
         assertEquals(0x100000, Integer.lowestOneBit(0x900000));
         assertEquals(0x100000, Integer.lowestOneBit(0xD00000));
-        
+
         assertEquals(0x40, Integer.lowestOneBit(0x40));
         assertEquals(0x40, Integer.lowestOneBit(0xC0));
-        
+
         assertEquals(0x4000, Integer.lowestOneBit(0x4000));
         assertEquals(0x4000, Integer.lowestOneBit(0xC000));
-        
+
         assertEquals(0x4000, Integer.lowestOneBit(0x99994000));
         assertEquals(0x4000, Integer.lowestOneBit(0x9999C000));
-        
+
         assertEquals(0, Integer.lowestOneBit(0));
         assertEquals(1, Integer.lowestOneBit(1));
         assertEquals(1, Integer.lowestOneBit(-1));
     }
+
     /**
      * @tests java.lang.Integer#numberOfLeadingZeros(int)
      */
@@ -1066,11 +1091,11 @@ public class IntegerTest extends TestCase {
         assertEquals(3, Integer.numberOfLeadingZeros(0x10000000));
         assertEquals(0, Integer.numberOfLeadingZeros(0x80000000));
         assertEquals(0, Integer.numberOfLeadingZeros(0xF0000000));
-        
+
         assertEquals(1, Integer.numberOfLeadingZeros(Integer.MAX_VALUE));
         assertEquals(0, Integer.numberOfLeadingZeros(Integer.MIN_VALUE));
     }
-    
+
     /**
      * @tests java.lang.Integer#numberOfTrailingZeros(int)
      */
@@ -1078,40 +1103,40 @@ public class IntegerTest extends TestCase {
         assertEquals(32, Integer.numberOfTrailingZeros(0x0));
         assertEquals(31, Integer.numberOfTrailingZeros(Integer.MIN_VALUE));
         assertEquals(0, Integer.numberOfTrailingZeros(Integer.MAX_VALUE));
-        
+
         assertEquals(0, Integer.numberOfTrailingZeros(0x1));
         assertEquals(3, Integer.numberOfTrailingZeros(0x8));
         assertEquals(0, Integer.numberOfTrailingZeros(0xF));
-        
+
         assertEquals(4, Integer.numberOfTrailingZeros(0x10));
         assertEquals(7, Integer.numberOfTrailingZeros(0x80));
         assertEquals(4, Integer.numberOfTrailingZeros(0xF0));
-        
+
         assertEquals(8, Integer.numberOfTrailingZeros(0x100));
         assertEquals(11, Integer.numberOfTrailingZeros(0x800));
         assertEquals(8, Integer.numberOfTrailingZeros(0xF00));
-        
+
         assertEquals(12, Integer.numberOfTrailingZeros(0x1000));
         assertEquals(15, Integer.numberOfTrailingZeros(0x8000));
         assertEquals(12, Integer.numberOfTrailingZeros(0xF000));
-        
+
         assertEquals(16, Integer.numberOfTrailingZeros(0x10000));
         assertEquals(19, Integer.numberOfTrailingZeros(0x80000));
         assertEquals(16, Integer.numberOfTrailingZeros(0xF0000));
-        
+
         assertEquals(20, Integer.numberOfTrailingZeros(0x100000));
         assertEquals(23, Integer.numberOfTrailingZeros(0x800000));
         assertEquals(20, Integer.numberOfTrailingZeros(0xF00000));
-        
+
         assertEquals(24, Integer.numberOfTrailingZeros(0x1000000));
         assertEquals(27, Integer.numberOfTrailingZeros(0x8000000));
         assertEquals(24, Integer.numberOfTrailingZeros(0xF000000));
-        
+
         assertEquals(28, Integer.numberOfTrailingZeros(0x10000000));
         assertEquals(31, Integer.numberOfTrailingZeros(0x80000000));
         assertEquals(28, Integer.numberOfTrailingZeros(0xF0000000));
     }
-    
+
     /**
      * @tests java.lang.Integer#bitCount(int)
      */
@@ -1132,7 +1157,7 @@ public class IntegerTest extends TestCase {
         assertEquals(3, Integer.bitCount(0xD));
         assertEquals(3, Integer.bitCount(0xE));
         assertEquals(4, Integer.bitCount(0xF));
-        
+
         assertEquals(8, Integer.bitCount(0xFF));
         assertEquals(12, Integer.bitCount(0xFFF));
         assertEquals(16, Integer.bitCount(0xFFFF));
@@ -1141,9 +1166,9 @@ public class IntegerTest extends TestCase {
         assertEquals(28, Integer.bitCount(0xFFFFFFF));
         assertEquals(32, Integer.bitCount(0xFFFFFFFF));
     }
-    
+
     /**
-     * @tests java.lang.Integer#rotateLeft(int,int)
+     * @tests java.lang.Integer#rotateLeft(int, int)
      */
     public void test_rotateLeftII() {
         assertEquals(0xF, Integer.rotateLeft(0xF, 0));
@@ -1156,9 +1181,9 @@ public class IntegerTest extends TestCase {
         assertEquals(0xF0000000, Integer.rotateLeft(0xF, 28));
         assertEquals(0xF0000000, Integer.rotateLeft(0xF0000000, 32));
     }
-    
+
     /**
-     * @tests java.lang.Integer#rotateRight(int,int)
+     * @tests java.lang.Integer#rotateRight(int, int)
      */
     public void test_rotateRightII() {
         assertEquals(0xF, Integer.rotateRight(0xF0, 4));
@@ -1170,9 +1195,9 @@ public class IntegerTest extends TestCase {
         assertEquals(0xF, Integer.rotateRight(0xF0000000, 28));
         assertEquals(0xF0000000, Integer.rotateRight(0xF0000000, 32));
         assertEquals(0xF0000000, Integer.rotateRight(0xF0000000, 0));
-        
+
     }
-    
+
     /**
      * @tests java.lang.Integer#reverseBytes(int)
      */
@@ -1182,24 +1207,24 @@ public class IntegerTest extends TestCase {
         assertEquals(0x00112233, Integer.reverseBytes(0x33221100));
         assertEquals(0x20000002, Integer.reverseBytes(0x02000020));
     }
-    
+
     /**
      * @tests java.lang.Integer#reverse(int)
      */
     public void test_reverseI() {
         assertEquals(-1, Integer.reverse(-1));
-        assertEquals(0x80000000,Integer.reverse(1));
+        assertEquals(0x80000000, Integer.reverse(1));
     }
-    
+
     /**
      * @tests java.lang.Integer#signum(int)
      */
     public void test_signumI() {
-        for (int i = -128; i<0; i++) {
+        for (int i = -128; i < 0; i++) {
             assertEquals(-1, Integer.signum(i));
         }
         assertEquals(0, Integer.signum(0));
-        for (int i = 1; i<=127; i++) {
+        for (int i = 1; i <= 127; i++) {
             assertEquals(1, Integer.signum(i));
         }
     }
